--- a/mail/mail/static/mail/styles.css
+++ b/mail/mail/static/mail/styles.css
@@ -1,3 +1,13 @@
 textarea {
     min-height: 400px;
 }
+
+.timestamp {
+    text-align: right;
+    color: #5f6368;
+    float: right;
+}
+
+.inline {
+    display: inline-block;
+}
